WIK-DPS-TP04/replicaset.yaml
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: my-replica
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: tp4
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 8080


apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
